--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -28,7 +28,7 @@
         }
     }
     code {
-        color: $green;
+        color: $magenta;
     }
     h1, h2, h3, h4, h5, h6 {
         font-size: medium;
