--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -92,7 +92,7 @@
     .avatar > img {
         border-radius: 70%;
         float: right;
-        margin: -16px 0 0 16px;
+        margin: -16px 16px 16px 16px;
         height: $avatar-size;
         width: $avatar-size;
     }
