--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -91,8 +91,8 @@
     }
     .avatar > img {
         border-radius: 70%;
-        float: right;
-        margin: -16px 16px 16px 16px;
+        float: left;
+        margin: -16px -16px 16px 16px;
         height: $avatar-size;
         width: $avatar-size;
     }
