--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -93,7 +93,7 @@
     .avatar > img {
         border-radius: 70%;
         float: right;
-        margin: 15px;
+        margin: 10px 15px 10px;
         padding: 15px;
         height: $avatar-size;
         width: $avatar-size;
