--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -92,7 +92,7 @@
     }
     .avatar > img {
         border-radius: 70%;
-        float: right;
+        float: left;
         margin: 10px 15px 10px;
         padding: 15px;
         height: $avatar-size;
