--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -38,7 +38,7 @@
     }
     @for $i from 1 through 4 {
         h#{$i} {
-            font-size: 1.2rem + 1* (4 - $i);
+            font-size: 1.2rem;
         }
     }
     img {
@@ -92,7 +92,7 @@
     }
     .avatar > img {
         border-radius: 70%;
-        float: left;
+        float: right;
         margin: 10px 15px 10px;
         padding: 15px;
         height: $avatar-size;
