--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -31,7 +31,7 @@
         color: $magenta;
     }
     h1, h2, h3, h4, h5, h6 {
-        font-size: medium;
+        font-size: large;
         font-weight: bold;
         line-height: normal;
         margin: 1.2rem 0 0.8rem 0;
